Alignment issue and more styles.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,3 +38,7 @@ $input-group-addon-color: #4d4637;
 .text-muted {
 	color: #b3aa99 !important;
 }
+
+svg {
+	width: 25px;
+}
